kubernetes/namespaces/base/game-servers/enemy-territory/app/ingress.yaml
# UDP traffic through nginx-ingress is configured in the nginx-ingress helmrelease.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enemy-territory
  namespace: game-servers
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - et.raspbernetes.com
      # TODO: discover why this wasn't created
      secretName: et.raspbernetes.com-ingress-cert
  rules:
    - host: et.raspbernetes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enemy-territory
                port:
                  number: 27960
